--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -368,6 +368,10 @@
   <!-- Clinic & Health Records -->
   <script src="features/clinic/clinic.service.js"></script>
   <script src="features/clinic/clinic.controller.js"></script>
+
+  <!-- Department Admin: Deficiency Tagging -->
+  <script src="features/department/deficiencies/deficiencies.service.js"></script>
+  <script src="features/department/deficiencies/deficiencies.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
   <!-- Global header (hidden on public upload pages) -->
