--- a/frontend/unity-spa/features/students/checklist-edit.html
+++ b/frontend/unity-spa/features/students/checklist-edit.html
@@ -6,7 +6,7 @@
       <div>
         <h1 class="text-lg font-medium text-gray-700">
           <i class="fas fa-edit mr-2 text-blue-600"></i>
-          Edit Graduation Checklist
+          Edit Student Checklist
         </h1>
         <nav class="text-sm text-gray-500 mt-1">
           <a href="#/students" class="hover:text-blue-600">Students</a>
