--- a/frontend/unity-spa/features/students/records.html
+++ b/frontend/unity-spa/features/students/records.html
@@ -31,7 +31,7 @@
         <button class="px-4 py-2 -mb-px border-b-2"
                 ng-class="vm.activeTab==='checklist' ? 'border-blue-600 text-blue-600' : 'border-transparent text-gray-500'"
                 ng-click="vm.setTab('checklist')">
-          <i class="fas fa-tasks mr-1"></i> Graduation Checklist
+          <i class="fas fa-tasks mr-1"></i> Student Checklist
         </button>
         <button class="ml-4 px-4 py-2 -mb-px border-b-2"
                 ng-class="vm.activeTab==='grades' ? 'border-blue-600 text-blue-600' : 'border-transparent text-gray-500'"
@@ -45,7 +45,7 @@
     <div ng-show="vm.activeTab==='checklist'">
       <div class="px-4 py-3 border-b border-gray-200 flex items-center justify-between">
         <h2 class="text-lg font-medium text-gray-700">
-          <i class="fas fa-tasks mr-2"></i> Graduation Checklist
+          <i class="fas fa-tasks mr-2"></i> Student Checklist
         </h2>
         <div class="flex items-center space-x-3">
           <div class="text-sm text-gray-500" ng-if="vm.loading.checklist || vm.loading.checklistAction">
