--- a/frontend/unity-spa/features/registrar/enlistment/enlistment.html
+++ b/frontend/unity-spa/features/registrar/enlistment/enlistment.html
@@ -40,6 +40,7 @@
         <option value="new">New</option>
         <option value="returnee">Returnee</option>
         <option value="transfer">Transferee</option>
+        <option value="shiftee">Shiftee</option>
         <option value="acadres">Academic Residency</option>        
       </select>
     </div>
