--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -210,6 +210,10 @@
   <!-- Daily Enrollment (SPA) -->
   <script src="features/registrar/daily-enrollment.service.js"></script>
   <script src="features/registrar/daily-enrollment.controller.js"></script>
+  <!-- Registrar: Change Student Password -->
+  <script src="features/registrar/change-password/change-password.service.js"></script>
+  <script src="features/registrar/change-password/change-password.controller.js"></script>
+  <!-- Finance -->
   <script src="features/finance/ledger.service.js"></script>
   <script src="features/finance/ledger.controller.js"></script>
   <!-- Finance: Payment Modes -->
@@ -245,6 +249,9 @@
   <script src="features/students/checklist-edit.controller.js"></script>
   <!-- Student Dashboard -->
   <script src="features/student-dashboard/student-dashboard.controller.js"></script>
+  <!-- Student Finances -->
+  <script src="features/student/finances/student-finances.service.js"></script>
+  <script src="features/student/finances/student-finances.controller.js"></script>
   <!-- Student Applicant Viewer -->
   <script src="features/student/applicant-viewer/student-applicant-viewer.controller.js"></script>
   <!-- Admissions application feature -->
@@ -350,16 +357,22 @@
   <script src="features/admin/invoices/invoice-edit.controller.js"></script>
   <script src="features/admin/system-alerts/system-alerts.controller.js"></script>
 
+  <!-- Admin: Students Editor -->
+  <script src="features/admin/students/admin-student-edit.controller.js"></script>
+  <script src="features/admin/students/prompt.controller.js"></script>
+
   <!-- Unity feature -->
   <script src="features/unity/unity.service.js"></script>
   <!-- Finance Cashier Viewer -->
   <script src="features/finance/cashier-viewer/cashier-viewer.controller.js"></script>
   <!-- Registrar Registration Viewer (new SPA) -->
   <script src="features/registrar/registration-viewer/registration-viewer.controller.js"></script>
-  <!-- Registrar Enlistment feature -->
-  <script src="features/registrar/enlistment/enlistment.controller.js"></script>
-  <script src="features/registrar/enlistment/enlistment-applicants.controller.js"></script>
-  <!-- Registrar Sections & Slots Monitor -->
+      <!-- Registrar Enlistment feature -->
+      <script src="features/registrar/enlistment/enlistment.controller.js"></script>
+      <script src="features/registrar/enlistment/enlistment-applicants.controller.js"></script>
+      <!-- Registrar: Shifting (Program/Curriculum per term) -->
+      <script src="features/registrar/shifting/shifting.controller.js"></script>
+      <!-- Registrar Sections & Slots Monitor -->
   <script src="features/registrar/sections-slots/sections-slots.service.js"></script>
   <script src="features/registrar/sections-slots/sections-slots.controller.js"></script>
   <!-- Registrar: Credit Subjects -->
