--- a/frontend/unity-spa/features/students/viewer.html
+++ b/frontend/unity-spa/features/students/viewer.html
@@ -72,39 +72,72 @@
       </div>
       <div ng-if="!vm.studentInfo && !vm.loading.studentInfo" class="text-sm text-gray-500">No data</div>
     </div>
-  </div>
+  </div> 
 
-  <!-- Balances -->
-  <div class="bg-white shadow rounded">
+  <!-- Deficiencies (Registrar/Admin) -->
+  <div class="bg-white shadow rounded" ng-if="vm.hasRegistrarOrAdmin()">
     <div class="px-4 py-3 border-b border-gray-200 flex items-center justify-between">
       <h2 class="text-lg font-medium text-gray-700">
-        <i class="fas fa-balance-scale mr-2"></i> Balances
+        <i class="fas fa-exclamation-triangle mr-2"></i> Deficiencies
       </h2>
-      <div class="text-sm text-gray-500" ng-if="vm.loading.balances">
+      <div class="text-sm text-gray-500" ng-if="vm.loading.deficiencies">
         <i class="fas fa-spinner fa-spin mr-1"></i> Loading...
       </div>
-      <div class="text-sm text-red-600" ng-if="vm.error.balances">{{ vm.error.balances }}</div>
+      <div class="text-sm text-red-600" ng-if="vm.error.deficiencies">{{ vm.error.deficiencies }}</div>
     </div>
     <div class="p-4">
-      <div ng-if="vm.balances">
-        <!-- Unknown exact shape; show generic dump plus quick highlights if present -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
-          <div class="p-3 bg-gray-50 rounded" ng-if="vm.balances.total_due !== undefined">
-            <div class="text-xs text-gray-500">Total Due</div>
-            <div class="text-lg font-semibold">₱ {{ vm.balances.total_due | number:2 }}</div>
-          </div>
-          <div class="p-3 bg-gray-50 rounded" ng-if="vm.balances.total_paid !== undefined">
-            <div class="text-xs text-gray-500">Total Paid</div>
-            <div class="text-lg font-semibold">₱ {{ vm.balances.total_paid | number:2 }}</div>
-          </div>
-          <div class="p-3 bg-gray-50 rounded" ng-if="vm.balances.balance !== undefined">
-            <div class="text-xs text-gray-500">Balance</div>
-            <div class="text-lg font-semibold">₱ {{ vm.balances.balance | number:2 }}</div>
+      <div ng-if="vm.deficiencies && vm.deficiencies.terms && vm.deficiencies.terms.length">
+        <div class="space-y-3">
+          <div class="border rounded" ng-repeat="t in vm.deficiencies.terms track by $index">
+            <div class="px-3 py-2 bg-gray-50 border-b flex items-center justify-between">
+              <div class="text-sm font-medium text-gray-700">
+                {{ t.label || ('SY #' + (t.syid || '-')) }}
+              </div>
+              <div class="text-sm text-gray-700">
+                <span class="font-medium">Total:</span> ₱ {{ t.total_amount | number:2 }}
+              </div>
+            </div>
+            <div class="p-3">
+              <div ng-if="t.items && t.items.length">
+                <div class="overflow-x-auto">
+                  <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
+                      <tr>
+                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Term</th>
+                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Department</th>
+                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
+                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Amount</th>
+                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Posted At</th>
+                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Remarks</th>
+                      </tr>
+                    </thead>
+                    <tbody class="bg-white divide-y divide-gray-200">
+                      <tr ng-repeat="d in t.items track by d.id">
+                        <td class="px-3 py-2 text-sm text-gray-900">{{ t.label || ('SY #' + (t.syid || '-')) }}</td>
+                        <td class="px-3 py-2 text-sm text-gray-900">{{ d.department_code || '-' }}</td>
+                        <td class="px-3 py-2 text-sm text-gray-900">{{ d.payment_description_name || d.description || '-' }}</td>
+                        <td class="px-3 py-2 text-sm text-gray-900">₱ {{ d.amount | number:2 }}</td>
+                        <td class="px-3 py-2 text-sm text-gray-900">{{ d.posted_at || '-' }}</td>
+                        <td class="px-3 py-2 text-sm text-gray-900">{{ d.remarks || '-' }}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+              <div ng-if="!t.items || !t.items.length" class="text-sm text-gray-500">
+                No deficiencies in this term.
+              </div>
+            </div>
           </div>
         </div>
-        <pre class="text-xs bg-gray-50 p-3 rounded overflow-x-auto">{{ vm.balances | json }}</pre>
+        <div class="mt-3 border-t pt-3 text-right">
+          <span class="text-sm text-gray-700 mr-2">Grand Total:</span>
+          <span class="text-lg font-semibold">₱ {{ (vm.deficiencies.totals && vm.deficiencies.totals.grand_total_amount) ? (vm.deficiencies.totals.grand_total_amount | number:2) : (0 | number:2) }}</span>
+        </div>
       </div>
-      <div ng-if="!vm.balances && !vm.loading.balances" class="text-sm text-gray-500">No data</div>
+      <div ng-if="(!vm.deficiencies || !vm.deficiencies.terms || !vm.deficiencies.terms.length) && !vm.loading.deficiencies && !vm.error.deficiencies" class="text-sm text-gray-500">
+        No deficiencies found.
+      </div>
     </div>
   </div>
 
