--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -254,6 +254,8 @@
   <script src="features/student/finances/student-finances.controller.js"></script>
   <!-- Student Applicant Viewer -->
   <script src="features/student/applicant-viewer/student-applicant-viewer.controller.js"></script>
+  <!-- Student: Change Program Request -->
+  <script src="features/student/change-program-request/change-program-request.controller.js"></script>
   <!-- Admissions application feature -->
   <script src="features/admissions/apply.controller.js"></script>
   <script src="features/admissions/success.controller.js"></script>
