--- a/frontend/unity-spa/features/registrar/shifting/shifting.html
+++ b/frontend/unity-spa/features/registrar/shifting/shifting.html
@@ -40,11 +40,11 @@
     </div>
 
     <!-- Actions -->
-    <div class="flex items-end">
+    <div class="md:mt-6 flex md:justify-end">
       <a ng-if="vm.student_id"
          href="#/students/{{vm.student_id}}/records?sn={{vm.studentNumber}}"
          target="_blank"
-         class="w-full px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 text-center">
+         class="w-full md:w-auto px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 text-center">
         <i class="fas fa-external-link-alt mr-1"></i> View Records
       </a>
     </div>
@@ -59,7 +59,7 @@
       </span>
     </div>
     <div ng-if="!vm.registration" class="text-gray-600 bg-gray-50 border rounded p-3">
-      No registration found for this term. Shifting edits require an existing registration.
+      No registration found for this term.
     </div>
     <div ng-if="vm.registration" class="grid grid-cols-1 md:grid-cols-3 gap-4 text-sm">
       <div>
@@ -81,6 +81,70 @@
     </div>
   </div>
 
+  <!-- Shift Request (Selected Term) -->
+  <div class="bg-white border rounded p-4 space-y-2">
+    <div class="flex items-center justify-between">
+      <h2 class="text-lg font-semibold">Shift Request</h2>
+      <span class="text-xs text-gray-500" ng-if="vm.student_id && vm.term">Student ID: {{ vm.student_id }} · Term: {{ vm.term }}</span>
+    </div>
+
+    <div ng-if="!vm.student_id || !vm.term" class="text-gray-600 bg-gray-50 border rounded p-3">
+      Select a student and term to load any shift request.
+    </div>
+
+    <div ng-if="vm.student_id && vm.term && !vm.shiftRequest" class="text-gray-600 bg-gray-50 border rounded p-3">
+      No shift request found for this student in the selected term.
+    </div>
+
+    <div ng-if="vm.shiftRequest" class="grid grid-cols-1 md:grid-cols-3 gap-4 text-sm">
+      <div>
+        <div class="text-gray-500 uppercase text-xs">Requested At</div>
+        <div class="font-medium">{{ vm.shiftRequest.requested_at || '—' }}</div>
+      </div>
+      <div>
+        <div class="text-gray-500 uppercase text-xs">Status</div>
+        <div class="font-medium capitalize">{{ vm.shiftRequest.status || 'pending' }}</div>
+      </div>
+      <div>
+        <div class="text-gray-500 uppercase text-xs">Reason</div>
+        <div class="font-medium break-words">{{ vm.shiftRequest.reason || '—' }}</div>
+      </div>
+      <div>
+        <div class="text-gray-500 uppercase text-xs">Program</div>
+        <div class="font-medium">
+          {{ vm.programShort(vm.shiftRequest.program_from) }} → {{ vm.programShort(vm.shiftRequest.program_to) }}
+        </div>
+      </div>
+      <div>
+        <div class="text-gray-500 uppercase text-xs">Processed At</div>
+        <div class="font-medium">{{ vm.shiftRequest.processed_at || '—' }}</div>
+      </div>
+      <div>
+        <div class="text-gray-500 uppercase text-xs">Processed By (Faculty ID)</div>
+        <div class="font-medium">{{ vm.shiftRequest.processed_by_faculty_id || '—' }}</div>
+      </div>
+    </div>
+
+    <!-- Actions -->
+    <div class="mt-3 flex items-center gap-2" ng-if="vm.shiftRequest && (vm.shiftRequest.status || 'pending') === 'pending'">
+      <button class="px-3 py-2 bg-red-600 text-white rounded hover:bg-red-700 disabled:opacity-50"
+              ng-disabled="vm.reqSaving"
+              ng-click="vm.rejectShiftRequest()">
+        <span ng-if="!vm.reqSaving"><i class="fas fa-times mr-1"></i> Reject</span>
+        <span ng-if="vm.reqSaving"><i class="fas fa-spinner fa-spin mr-1"></i> Processing...</span>
+      </button>
+      <button class="px-3 py-2 bg-gray-600 text-white rounded hover:bg-gray-700 disabled:opacity-50"
+              ng-disabled="vm.reqSaving"
+              ng-click="vm.cancelShiftRequest()">
+        <span ng-if="!vm.reqSaving"><i class="fas fa-ban mr-1"></i> Cancel</span>
+        <span ng-if="vm.reqSaving"><i class="fas fa-spinner fa-spin mr-1"></i> Processing...</span>
+      </button>
+      <div class="text-xs text-gray-500 ml-2">
+        Note: Approve by performing the Program/Curriculum update. Approval happens automatically on save.
+      </div>
+    </div>
+  </div>
+
   <!-- Shifting form -->
   <div class="bg-white border rounded p-4 space-y-4">
     <h2 class="text-lg font-semibold">Update Program and Curriculum</h2>
@@ -93,8 +157,9 @@
           ng-model="vm.form.program_id"
           ng-change="vm.onProgramChange()"
           class="mt-1 block w-full border rounded px-3 py-2"
-          ng-options="(p.intProgramID || p.id) as (p.strProgramCode + ' — ' + p.strProgramDescription) for p in vm.programs track by (p.intProgramID || p.id)">
-          <option value="">-- Select Program --</option>
+          ng-options="(p.intProgramID || p.id) as (p.strProgramCode + ' — ' + p.strProgramDescription) for p in vm.programs track by (p.intProgramID || p.id)"          
+          data-placeholder="-- Select Program --">
+          <option value="">{{ vm.form.program_id }}</option>
         </select>
       </div>
 
@@ -104,7 +169,8 @@
         <select
           ng-model="vm.form.curriculum_id"
           class="mt-1 block w-full border rounded px-3 py-2"
-          ng-options="(c.intID || c.id) as (c.strName || c.name) for c in vm.curricula track by (c.intID || c.id)">
+          ng-options="(c.intID || c.id) as (c.strName || c.name) for c in vm.curricula track by (c.intID || c.id)"          
+          data-placeholder="-- Select Curriculum --">
           <option value="">-- Select Curriculum --</option>
         </select>
         <div class="text-xs text-gray-500 mt-1" ng-if="vm.form.program_id && !vm.curricula.length">
@@ -117,14 +183,14 @@
         <button class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 disabled:opacity-50"
                 ng-disabled="!vm.canSave() || vm.saving"
                 ng-click="vm.saveShift()">
-          <span ng-if="!vm.saving"><i class="fas fa-save mr-1"></i> Save</span>
+          <span ng-if="!vm.saving"><i class="fas fa-save mr-1"></i> Approve and Save</span>
           <span ng-if="vm.saving"><i class="fas fa-spinner fa-spin mr-1"></i> Saving...</span>
         </button>
       </div>
     </div>
 
     <div class="text-xs text-gray-500">
-      Note: Changes apply to the registration for the selected term (current_program and current_curriculum).
+      Note: If a registration exists for the selected term, it will be reset (all enlisted classes removed and the registration deleted) before applying the Program/Curriculum change to the student’s base record. If no registration exists, the Program/Curriculum is updated on the student’s base record directly.
     </div>
   </div>
 </div>
