--- a/frontend/unity-spa/features/faculty/edit.html
+++ b/frontend/unity-spa/features/faculty/edit.html
@@ -92,15 +92,15 @@
         <div>
           <label class="block text-sm font-medium text-gray-700">Teaching</label>
           <select class="mt-1 block w-full border rounded px-3 py-2 text-sm" ng-model="vm.model.teaching">
-            <option value="1">Yes</option>
-            <option value="0">No</option>
+            <option ng-value="1">Yes</option>
+            <option ng-value="0">No</option>
           </select>
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700">Active</label>
           <select class="mt-1 block w-full border rounded px-3 py-2 text-sm" ng-model="vm.model.isActive">
-            <option value="1">Yes</option>
-            <option value="0">No</option>
+            <option ng-value="1">Yes</option>
+            <option ng-value="0">No</option>
           </select>
         </div>
       </div>
