--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -55,6 +55,9 @@
   <!-- CSS fallbacks in case a CDN is blocked -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
   <link rel="stylesheet" href="https://unpkg.com/intl-tel-input@18.7.1/build/css/intlTelInput.css">
+  <!-- Local fonts: Montserrat + Gotham -->
+  <link rel="stylesheet" href="../../assets/css/fonts.css">
+  <link rel="stylesheet" href="../../assets/css/typography.css">
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.7.1/build/js/intlTelInput.min.js"></script>
   <!-- Preload utils to ensure formatting/masking availability -->
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.7.1/build/js/utils.js"></script>
@@ -293,6 +296,11 @@
   <!-- Faculty admin feature -->
   <script src="features/faculty/faculty.service.js"></script>
   <script src="features/faculty/faculty.controller.js"></script>
+
+  <!-- Advisors management (Faculty Admin) -->
+  <script src="features/advisors/advisors.service.js"></script>
+  <script src="features/advisors/advisors.controller.js"></script>
+  <script src="features/advisors/quick-view.controller.js"></script>
 
   <!-- School Years feature -->
   <script src="features/school-years/school-years.service.js"></script>
