--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -360,6 +360,9 @@
   <!-- Admin: Payment Details -->
   <script src="features/admin/payment-details/payment-details.service.js"></script>
   <script src="features/admin/payment-details/payment-details.controller.js"></script>
+  <!-- Admin: Payment Details Import -->
+  <script src="features/admin/payment-details/import/payment-details-import.service.js"></script>
+  <script src="features/admin/payment-details/import/payment-details-import.controller.js"></script>
 
   <!-- Admin: Invoices CRUD -->
   <script src="features/admin/invoices/invoices.service.js"></script>
