--- a/frontend/unity-spa/features/finance/cashier-viewer/cashier-viewer.html
+++ b/frontend/unity-spa/features/finance/cashier-viewer/cashier-viewer.html
@@ -1123,7 +1123,7 @@
                   <th class="px-3 py-2 text-left">Status</th>
                   <th class="px-3 py-2 text-left">Method</th>
                   <th class="px-3 py-2 text-left">School Year</th>
-                  <th class="px-3 py-2 text-left" ng-if="vm.canEdit && vm.myCashier">Assign</th>
+                  <th class="px-3 py-2 text-left" ng-if="vm.canEdit && vm.myCashier">Actions</th>
                 </tr>
               </thead>
               <tbody ng-if="vm.paymentDetails && vm.paymentDetails.items && vm.paymentDetails.items.length">
@@ -1142,6 +1142,12 @@
                       ng-if="vm.canShowAssignButton(p)"
                       ng-click="vm.openAssignNumberModal(p)">
                       Assign Number
+                    </button>
+                    <button
+                      class="inline-flex items-center px-2 py-1 rounded border border-indigo-600 text-indigo-700 hover:bg-indigo-50 ml-2"
+                      ng-if="p.or_no"
+                      ng-click="vm.printOr(p)">
+                      Print OR
                     </button>
                   </td>
                 </tr>
