--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -238,6 +238,10 @@
   <script src="features/finance/payment-actions/payment-actions.service.js"></script>
   <script src="features/finance/payment-actions/payment-actions.controller.js"></script>
 
+  <!-- Finance: Non-Student Payments -->
+  <script src="features/finance/non-student-payments/non-student-payments.service.js"></script>
+  <script src="features/finance/non-student-payments/non-student-payments.controller.js"></script>
+
   <script src="features/scholarship/students.controller.js"></script>
   <script src="features/scholarship/scholarships/scholarships.service.js"></script>
   <script src="features/scholarship/scholarships/scholarships.controller.js"></script>
