--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -238,6 +238,13 @@
   <script src="features/finance/payment-actions/payment-actions.service.js"></script>
   <script src="features/finance/payment-actions/payment-actions.controller.js"></script>
 
+  <!-- Finance: Invoice Reports -->
+  <script src="features/finance/invoice-reports/invoice-reports.service.js"></script>
+  <script src="features/finance/invoice-reports/invoice-reports.controller.js"></script>
+  <!-- Finance: Official Receipt (OR) Reports -->
+  <script src="features/finance/or-reports/or-reports.service.js"></script>
+  <script src="features/finance/or-reports/or-reports.controller.js"></script>
+
   <!-- Finance: Non-Student Payments -->
   <script src="features/finance/non-student-payments/non-student-payments.service.js"></script>
   <script src="features/finance/non-student-payments/non-student-payments.controller.js"></script>
