--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -379,6 +379,14 @@
   <script src="features/admin/invoices/invoices.service.js"></script>
   <script src="features/admin/invoices/invoices.controller.js"></script>
   <script src="features/admin/invoices/invoice-edit.controller.js"></script>
+  <!-- Admin: Users Import -->
+  <script src="features/admin/users-import/users-import.controller.js"></script>
+  <!-- Admin: Subjects Import -->
+  <script src="features/admin/subjects-import/subjects-import.controller.js"></script>
+  <!-- Admin: Programs Import -->
+  <script src="features/admin/programs-import/programs-import.controller.js"></script>
+  <!-- Admin: Curricula Import -->
+  <script src="features/admin/curricula-import/curricula-import.controller.js"></script>
   <script src="features/admin/system-alerts/system-alerts.controller.js"></script>
 
   <!-- Admin: Students Editor -->
