--- a/frontend/unity-spa/features/classlists/edit.html
+++ b/frontend/unity-spa/features/classlists/edit.html
@@ -85,8 +85,37 @@
         <p class="text-xs text-gray-500 mt-1">Derived from the global campus selection. Read-only on Add.</p>
       </div>
       <div ng-if="vm.id">
-        <label class="block text-sm font-medium text-gray-700 mb-1">Campus ID</label>
-        <input type="number" class="w-full border rounded px-3 py-2" ng-model="vm.model.campus_id" placeholder="e.g. 1">
+        <label class="block text-sm font-medium text-gray-700 mb-1">Campus</label>
+        <select class="w-full border rounded px-3 py-2"
+                ng-model="vm.model.campus_id">
+                <option value="">-- Select Campus --</option>
+                <option ng-repeat="c in vm.campuses" ng-value="c.id">{{ c.campus_name }}</option>          
+        </select>
+      </div>
+      <!-- Special Class -->
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Special Class</label>
+        <div class="flex items-center space-x-3">
+          <input type="checkbox"
+                 class="h-4 w-4 text-blue-600 border-gray-300 rounded"
+                 ng-model="vm.model.special_class"
+                 ng-true-value="1"
+                 ng-false-value="0">
+          <span class="text-sm text-gray-700">Apply multiplier to tuition for this class (NSTP excluded).</span>
+        </div>
+      </div>
+
+      <!-- Multiplier -->
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Multiplier</label>
+        <input type="number"
+               step="0.0001"
+               min="0.0001"
+               class="w-full border rounded px-3 py-2"
+               ng-model="vm.model.special_multiplier"
+               ng-disabled="!vm.model.special_class"
+               placeholder="e.g. 1.2500">
+        <p class="text-xs text-gray-500 mt-1">Default 1.0000 (no change). Only applied when Special Class is enabled.</p>
       </div>
     </div>
 
