--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -418,6 +418,14 @@
   <!-- Department Admin: Deficiency Tagging -->
   <script src="features/department/deficiencies/deficiencies.service.js"></script>
   <script src="features/department/deficiencies/deficiencies.controller.js"></script>
+
+  <!-- Docs feature dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
+
+  <!-- Docs feature -->
+  <script src="features/help/docs/docs.service.js"></script>
+  <script src="features/help/docs/docs.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
   <!-- Global header (hidden on public upload pages) -->
