export student applicant format

--- a/frontend/unity-spa/features/admissions/applicants/list.html
+++ b/frontend/unity-spa/features/admissions/applicants/list.html
@@ -106,6 +106,10 @@
                 ng-click="vm.clearFilters()" ng-disabled="vm.loading">
           Clear
         </button>
+        <button class="inline-flex items-center px-3 py-2 bg-gray-100 hover:bg-gray-200 text-gray-800 rounded"
+                ng-click="vm.downloadTemplate()">
+          <i class="fas fa-file-excel mr-2 text-green-600"></i> Download Template
+        </button>
       </div>
     </div>
   </div>
