--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -245,6 +245,10 @@
   <script src="features/finance/or-reports/or-reports.service.js"></script>
   <script src="features/finance/or-reports/or-reports.controller.js"></script>
 
+  <!-- Finance: Daily Collections -->
+  <script src="features/finance/daily-collections/daily-collections.service.js"></script>
+  <script src="features/finance/daily-collections/daily-collections.controller.js"></script>
+
   <!-- Finance: Non-Student Payments -->
   <script src="features/finance/non-student-payments/non-student-payments.service.js"></script>
   <script src="features/finance/non-student-payments/non-student-payments.controller.js"></script>
