--- a/frontend/unity-spa/features/student/applicant-viewer/student-applicant-viewer.html
+++ b/frontend/unity-spa/features/student/applicant-viewer/student-applicant-viewer.html
@@ -30,7 +30,7 @@
         Reservation Fee: {{ vm.paid_reservation_fee ? 'Paid' : 'Unpaid' }}
       </span>
       <a class="inline-flex items-center px-3 py-2 bg-gray-100 text-gray-700 text-sm rounded-md hover:bg-gray-200"
-         href="#/student/dashboard">
+         href="#!/student/dashboard">
         Back
       </a>
     </div>
