--- a/frontend/unity-spa/features/students/checklist-edit.html
+++ b/frontend/unity-spa/features/students/checklist-edit.html
@@ -9,15 +9,15 @@
           Edit Student Checklist
         </h1>
         <nav class="text-sm text-gray-500 mt-1">
-          <a href="#/students" class="hover:text-blue-600">Students</a>
+          <a href="#!/students" class="hover:text-blue-600">Students</a>
           <span class="mx-2">/</span>
-          <a href="#/students/{{vm.id}}/records" class="hover:text-blue-600">{{vm.student && vm.student.full_name || 'Student'}}</a>
+          <a href="#!/students/{{vm.id}}/records" class="hover:text-blue-600">{{vm.student && vm.student.full_name || 'Student'}}</a>
           <span class="mx-2">/</span>
           <span class="text-gray-700">Edit Checklist</span>
         </nav>
       </div>
       <div class="flex space-x-2">
-        <a href="#/students/{{vm.id}}/records" class="px-3 py-1 text-sm border border-gray-300 rounded text-gray-700 bg-white hover:bg-gray-50">
+        <a href="#!/students/{{vm.id}}/records" class="px-3 py-1 text-sm border border-gray-300 rounded text-gray-700 bg-white hover:bg-gray-50">
           <i class="fas fa-arrow-left mr-1"></i> Back to Records
         </a>
         <button type="button" class="px-3 py-1 text-sm border border-transparent rounded text-white bg-green-600 hover:bg-green-700 disabled:opacity-50" 
