--- a/frontend/unity-spa/features/students/records.html
+++ b/frontend/unity-spa/features/students/records.html
@@ -13,11 +13,11 @@
   <!-- Navigation Tabs -->
   <div class="bg-white">
     <nav class="flex border-b border-gray-300">
-      <a ng-href="{{ '#/students/' + vm.id }}" 
+      <a ng-href="{{ '#!/students/' + vm.id }}" 
          class="px-4 py-3 text-sm font-medium text-gray-600 hover:text-gray-800 border-b border-gray-300 ml-1 rounded-t-lg hover:bg-gray-50 transition-colors duration-200">
         <i class="fas fa-info-circle mr-2"></i>Info
       </a>
-      <a ng-href="{{ '#/students/' + vm.id + '/records' }}" 
+      <a ng-href="{{ '#!/students/' + vm.id + '/records' }}" 
          class="px-4 py-3 text-sm font-medium border-l border-t border-r border-gray-300 bg-white text-blue-600 rounded-t-lg -mb-px relative z-10">
         <i class="fas fa-clipboard-list mr-2"></i>Records
       </a>
@@ -53,7 +53,7 @@
           </div>
           <div class="text-sm text-red-600" ng-if="vm.error.checklist">{{ vm.error.checklist }}</div>
           <div class="text-sm text-red-600" ng-if="vm.error.checklistAction">{{ vm.error.checklistAction }}</div>
-          <a ng-href="#/students/{{vm.id}}/checklist/edit" class="px-3 py-1 text-sm border border-blue-600 rounded text-blue-600 bg-white hover:bg-blue-50 transition-colors">
+          <a ng-href="#!/students/{{vm.id}}/checklist/edit" class="px-3 py-1 text-sm border border-blue-600 rounded text-blue-600 bg-white hover:bg-blue-50 transition-colors">
             <i class="fas fa-edit mr-1"></i> Edit Checklist
           </a>
         </div>
