--- a/frontend/unity-spa/features/students/viewer.html
+++ b/frontend/unity-spa/features/students/viewer.html
@@ -13,11 +13,11 @@
   <!-- Navigation Tabs -->
   <div class="bg-white">
     <nav class="flex border-b border-gray-300">
-      <a ng-href="{{ '#/students/' + vm.id }}" 
+      <a ng-href="{{ '#!/students/' + vm.id }}" 
          class="px-4 py-3 text-sm font-medium border-l border-t border-r border-gray-300 bg-white text-blue-600 rounded-t-lg -mb-px relative z-10">
         <i class="fas fa-info-circle mr-2"></i>Info
       </a>
-      <a ng-href="{{ '#/students/' + vm.id + '/records' }}" 
+      <a ng-href="{{ '#!/students/' + vm.id + '/records' }}" 
          ng-if="vm.state && vm.state.roles && (vm.state.roles.indexOf('registrar') !== -1 || vm.state.roles.indexOf('admin') !== -1)"
          class="px-4 py-3 text-sm font-medium text-gray-600 hover:text-gray-800 border-b border-gray-300 ml-1 rounded-t-lg hover:bg-gray-50 transition-colors duration-200">
         <i class="fas fa-clipboard-list mr-2"></i>Records
