Remove SSL options from MySQL database configuration in Laravel

--- a/frontend/unity-spa/features/grading/edit.html
+++ b/frontend/unity-spa/features/grading/edit.html
@@ -107,7 +107,7 @@
         </div>
         <div class="p-4">
           <form class="flex flex-col md:flex-row md:items-center md:space-x-3 space-y-3 md:space-y-0" ng-submit="vm.addSingleItem()">
-            <input type="number" step="1" class="border rounded px-3 py-2 md:w-48" ng-model="vm.singleItem.value" placeholder="Value" />
+            <input type="text" class="border rounded px-3 py-2 md:w-48" ng-model="vm.singleItem.value" placeholder="Value" />
             <input type="text" class="border rounded px-3 py-2 flex-1" ng-model="vm.singleItem.remarks" placeholder="Remarks" />
             <button type="submit" class="inline-flex items-center px-3 py-2 rounded bg-blue-600 text-white hover:bg-blue-700">
               <span class="fas fa-plus mr-2"></span> Add
