feat: Implement vehicle and room reservation modules
- Added VehicleReservationController for managing vehicle reservations including dashboard, CRUD operations, and conflict checking.
- Introduced RoomReservationController for handling room reservations with similar functionalities.
- Created models for Vehicle, VehicleReservation, RoomReservation, RoomEquipment, ReservationEquipment, CalendarSetting, and RoomConfiguration.
- Developed migrations for vehicle and reservation tables with necessary relationships and constraints.
- Updated API routes to include endpoints for vehicle and room reservations.
- Added SQL schema for vehicle reservations and initial vehicle data.
- Implemented validation and authorization checks for reservation actions.

--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -407,6 +407,16 @@
   <script src="features/clinic/clinic.service.js"></script>
   <script src="features/clinic/clinic.controller.js"></script>
 
+  <!-- Room Reservations -->
+  <script src="features/room-reservations/room-reservation.service.js"></script>
+  <script src="features/room-reservations/room-reservation.controller.js"></script>
+  <script src="features/room-reservations/equipment.service.js"></script>
+  <script src="features/room-reservations/equipment.controller.js"></script>
+
+  <!-- Vehicle Reservations -->
+  <script src="features/vehicle-reservations/vehicle-reservation.service.js"></script>
+  <script src="features/vehicle-reservations/vehicle-reservation.controller.js"></script>
+
   <!-- Department Admin: Deficiency Tagging -->
   <script src="features/department/deficiencies/deficiencies.service.js"></script>
   <script src="features/department/deficiencies/deficiencies.controller.js"></script>
